Bug 78383 - [ilk/snb/hsw regression] missed pageflips
Summary: [ilk/snb/hsw regression] missed pageflips
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: highest normal
Assignee: Daniel Vetter
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-07 10:06 UTC by Daniel Vetter
Modified: 2016-10-19 10:23 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Daniel Vetter 2014-05-07 10:06:03 UTC
Not a dupe of bug #78135 since dropping the patch Chris bisected too didn't help.

The test gets stuck in intel_crtc_wait_for_pending_flips forever. I've tried to bisect a bit already but got stuck in a sea of other regressions interferring, and tomorrow I'll leave for LinuxTag. So figured I'll leave this here.

Not tested yet whether it happens on other platforms, too.
Comment 1 Daniel Vetter 2014-05-19 12:34:44 UTC
Not actually a regression, but a bug in igt/piglit. I guess I have been blind:

root      4815  4801  0 14:23 pts/1    00:00:00 python ./piglit-run.py --verbose tests/igt.tests results/igt-full/2014y-05m-19d-14h-23m-20s
root      5136  4815  0 14:25 pts/1    00:00:00 [kms_flip]
root      5202  5150  0 14:32 pts/2    00:00:00 grep --colour=auto 4815

piglit apparently completely missed that its child has died.
Comment 2 Daniel Vetter 2014-05-19 12:37:29 UTC
Well, I'm still an idiot: kms_flip isn't a zombie yet, just dying:

[59495.529222] kms_flip        D ffff88023bd142c0     0  5136      1 0x00000002
[59495.529230]  ffff8802270ef9a8 0000000000000046 ffff88022c714a80 00000000000142c0
[59495.529239]  ffff8802270effd8 00000000000142c0 ffff880230146670 ffff88022c714a80
[59495.529248]  ffff8802270efa08 ffff88022d66b000 ffff88022cfb7de0 ffff88022d09e800
[59495.529257] Call Trace:
[59495.529263]  [<ffffffff816bb4f9>] schedule+0x29/0x70
[59495.529307]  [<ffffffffa00beb05>] intel_crtc_wait_for_pending_flips+0x75/0x110 [i915]
[59495.529317]  [<ffffffff810c55d0>] ? bit_waitqueue+0xd0/0xd0
[59495.529352]  [<ffffffffa00c7c23>] intel_crtc_disable_planes+0x33/0x1b0 [i915]
[59495.529388]  [<ffffffffa00c80cd>] ironlake_crtc_disable+0x4d/0x920 [i915]
[59495.529424]  [<ffffffffa00c97d7>] __intel_set_mode+0x297/0x15c0 [i915]
[59495.529437]  [<ffffffff816b4297>] ? printk+0x61/0x63
[59495.529471]  [<ffffffffa00cd016>] intel_set_mode+0x16/0x30 [i915]
[59495.529509]  [<ffffffffa00cde73>] intel_crtc_set_config+0x903/0xe90 [i915]
[59495.529517]  [<ffffffff810be36e>] ? enqueue_task_fair+0x32e/0x540
[59495.529553]  [<ffffffffa00bfd0b>] ? intel_user_framebuffer_destroy+0x6b/0xd0 [i915]
[59495.529581]  [<ffffffffa003c4c9>] drm_mode_set_config_internal+0x69/0xf0 [drm]
[59495.529606]  [<ffffffffa003ce01>] drm_framebuffer_remove+0xe1/0x140 [drm]
[59495.529630]  [<ffffffffa0040e24>] drm_fb_release+0x94/0xc0 [drm]
[59495.529648]  [<ffffffffa0031df8>] drm_release+0x4c8/0x5a0 [drm]
[59495.529656]  [<ffffffff811d2867>] __fput+0xe7/0x1f0
[59495.529663]  [<ffffffff811d29be>] ____fput+0xe/0x10
[59495.529670]  [<ffffffff810a0525>] task_work_run+0xc5/0xe0
[59495.529678]  [<ffffffff8108421e>] do_exit+0x2be/0xa30
[59495.529687]  [<ffffffff811d14fc>] ? vfs_write+0x16c/0x1d0
[59495.529699]  [<ffffffff81084a1f>] do_group_exit+0x3f/0xa0
[59495.529711]  [<ffffffff81084a97>] SyS_exit_group+0x17/0x20
[59495.529721]  [<ffffffff816c7329>] system_call_fastpath+0x16/0x1b
Comment 3 Daniel Vetter 2014-05-19 14:19:06 UTC
Ok, sent a hack to intel-gfx but that only prevents testcase hangs. igt on my ilk is still disastrous since gpu init after hangs seems to fail under some circumstances, which makes everything else fail badly :(
Comment 4 Chris Wilson 2014-05-21 06:23:26 UTC
Still the case following Ville's ILK reset cleanup?
Comment 5 Daniel Vetter 2014-05-22 06:43:12 UTC
The problem is that we kill the vblank interrupts. Same exists (at least on some platforms) for pipe crc interrupts. I've inked a few hours today to write the patches I think should resolve this.
Comment 6 Daniel Vetter 2014-06-18 13:50:10 UTC
We still miss vblank/flip completions on a lot of platforms. Definitely also seen on my snb and hsw.
Comment 7 Daniel Vetter 2014-08-08 16:12:54 UTC
Ok, gpu wedging on ilk is back, so can't really say whether the flip stuff is working again or still broken.
Comment 8 Daniel Vetter 2014-08-09 10:22:58 UTC
Ok, managed to complete a run. Trying to filter through the drm_master noise (luckily all the kms_flip test ran) it looks like the problem disappeared. And iirc it was fairly easy to repro with a full igt run back when I filed this.
Comment 9 Jari Tahvanainen 2016-10-19 10:23:54 UTC
Closing resolved+fixed after two years.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.